# flux

./: .env  .gitignore  README.txt  pyproject.toml  requirements.txt
flux_agent/: config.py  logging_config.py  storage.py
flux_agent/conversation/: __init__.py  manager.py
flux_agent/gui/: __init__.py  app.py  chat_panel.py  sidebar.py  theme.py  widgets.py
scripts/: run_gui.py  test_conversation.py  test_lmstudio_client.py  test_setup.py
